--- a/nar-geoserver/pom.xml
+++ b/nar-geoserver/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>nar-services</artifactId>
         <groupId>gov.usgs.cida.nar</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <groupId>gov.usgs.cida.nar</groupId>
     <artifactId>nar-geoserver</artifactId>
