--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -45,6 +45,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-netty</artifactId>
+			<version>3.9.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
