--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -174,6 +174,16 @@
 			<artifactId>woodstox-core-lgpl</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
