--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -185,6 +185,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.force66</groupId>
+			<artifactId>BeanTester</artifactId>
+			<version>1.0.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
