--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -191,6 +191,11 @@
 			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
