Enabling cors so that cross-origin requests on dev can work.

--- a/nar-webservices/src/main/webapp/WEB-INF/web.xml
+++ b/nar-webservices/src/main/webapp/WEB-INF/web.xml
@@ -2,4 +2,13 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<description>NAR Webervices</description>
 	<display-name>NAR Webervices</display-name>
+	
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
