--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -196,6 +196,11 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
