--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -21,6 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<gs.version>2.3.2</gs.version>
 		<gt.version>10.1</gt.version>
+		<cobertura.version>2.7</cobertura.version>
 	</properties>
 
 	<dependencies>
@@ -214,6 +215,34 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura.version}</version>
+				<configuration>
+					<!--<outputDirectory>${project.build.directory}/cobertura/</outputDirectory>-->
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura.version}</version>
+				<configuration>
+					<!--<outputDirectory>${project.build.directory}/cobertura/</outputDirectory>-->
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
