--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.usgs.cida.nar</groupId>
 	<artifactId>nar-services</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<packaging>pom</packaging>
 	<name>NAWQA Annual Reporting Services Parent Project</name>
 
@@ -71,7 +71,8 @@
 		<connection>scm:git:https://github.com/USGS-CIDA/nar-services.git</connection>
 		<developerConnection>scm:git:git@github.com:USGS-CIDA/nar-services.git</developerConnection>
 		<url>https://github.com/USGS-CIDA/nar-services</url>
-	</scm>
+	  <tag>nar-services-1.0.3</tag>
+  </scm>
 
 	<distributionManagement>
 		<repository>
