--- a/nar-webservices/pom.xml
+++ b/nar-webservices/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>nar-services</artifactId>
 		<groupId>gov.usgs.cida.nar</groupId>
-		<version>1.0.4-SNAPSHOT</version>
+		<version>1.0.4</version>
 	</parent>
 	<artifactId>nar-webservices</artifactId>
 	<packaging>war</packaging>
